required属性を追加 (#5)
