# src/@types/generate/models/index.ts
@@ -1,6 +1,6 @@
-export * from './member';
-export * from './skill-score';
-export * from './skill-tag';
-export * from './stamp';
-export * from './thread';
-export * from './thread-stamps';
+export * from "./member";
+export * from "./skill-score";
+export * from "./skill-tag";
+export * from "./stamp";
+export * from "./thread";
+export * from "./thread-stamps";
